<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textFontWeight="800"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="80dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_weight="1"
        />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text"
            android:hint="@string/hint_username"
            android:inputType="text"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:layout_weight="1"
        />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
        />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/text"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

</LinearLayout>